<resources>
    <string name="app_name">Bubblix</string>
    <string name="slogan">www.bubblix.com/slogan</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="share">Share</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="contact">Contact Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chafua">Hot Chapos with beans or green grams</string>
</resources>