<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:color="@color/white">
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart_24"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share_icon"
            android:title="@string/share" />
        <item
            android:id="@+id/logOut"
            android:icon="@drawable/share_icon"
            android:title="@string/log_out" />
    </group>
</menu>